testsuite/tests/typing-modules/pr7207.ml.reference

# module F : functor (X : sig  end) -> sig type t = int end
# Characters 9-28:
  type t = F(Does_not_exist).t;;
           ^^^^^^^^^^^^^^^^^^^
Error: Unbound module Does_not_exist
# 
